Add frontend and backend microservices